--- a/Foci/Pages/FociDelete.cshtml
+++ b/Foci/Pages/FociDelete.cshtml
@@ -59,6 +59,6 @@
     <form method="post">
         <input type="hidden" asp-for="Meccs.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="/FociList">Back to List</a>
     </form>
 </div>
