--- a/Foci/Pages/FociDetails.cshtml
+++ b/Foci/Pages/FociDetails.cshtml
@@ -56,6 +56,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Meccs.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./FociEdit" asp-route-id="@Model.Meccs.Id">Edit</a> |
+    <a asp-page="./FociList">Back to List</a>
 </div>
