--- a/Foci/Pages/FociEdit.cshtml
+++ b/Foci/Pages/FociEdit.cshtml
@@ -57,7 +57,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./FociList">Back to List</a>
 </div>
 
 @section Scripts {
