--- a/Foci/Pages/Shared/_Layout.cshtml
+++ b/Foci/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Tabella">Tabella</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AdatokFeltolteseFajlbol">Feltöltés</a>
+                        </li>
                     </ul>
                 </div>
             </div>
